created about page

--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -115,6 +115,26 @@
       a
         font-size: 14px
 
+  // About page
+
+  .slider_about_wr 
+
+    .about_nav
+      left: 70px
+    
+    .text_bl
+      max-width: 485px
+
+    img
+      max-width: 336px
+
+  .invest 
+    
+    .invest_txt 
+      
+      p
+        font-size: 16px
+
 
 @media screen and (max-device-width: 1280px) and (min-device-width: 1024px)
 
@@ -350,6 +370,39 @@
 
       span
         left: 50px
+
+    // About page
+
+  .slider_about_wr 
+
+    .about_nav
+      left: 50px
+    
+    .text_bl
+      max-width: 383px
+
+      img
+        max-width: 260px
+
+      p
+        font-size: 15px
+
+  .invest 
+    
+    .invest_txt 
+      
+      p
+        font-size: 16px
+
+  .char_itm
+    
+    &.white_itm 
+      
+      h3
+        font-size: 57px
+        line-height: 1
+
+
         
 
 
@@ -358,8 +411,12 @@
 	
 @media screen and (max-device-width: 1024px) and (min-device-width: 768px)
 
-  .response_cl
-    padding: 0 15px
+  // .response_cl
+  //   padding: 0 15px
+
+  .s_bread
+    padding-left: 15px
+    padding-right: 15px
 
   .menu_itms
     position: fixed
@@ -676,7 +733,96 @@
   .input_block input[type=email], .input_block input[type=tel], .input_block input[type=text], .input_block textarea
     margin: 20px 0 10px
 
+
+  // About page
+
+  .main_about_wr
+
+    .line_title
+      left: -66px
+
+
+  .slider_about_wr 
+
+    .slide
+      height: 330px
+    
+    .slide_counter 
+      
+      .all_slides
+        max-width: 56px
+
+    .about_nav
+      bottom: 0
+      left: 30px
+      max-width: 240px
+
+      .slide_arrows
+        max-width: 100px
+
+        div
+          max-width: 40px
+          padding: 5px 0
+    
+    .text_bl
+      max-width: 383px
+      padding: 20px
+
+      img
+        max-width: 240px
+        padding-bottom: 15px
+
+      h5
+        font-size: 14px
+        margin-bottom: 10px
+
+      p
+        font-size: 14px
+        margin: 0
+
+  .invest 
+    
+    .invest_txt 
+      
+      p
+        font-size: 16px
+
+  .char_itm
+    
+    &.white_itm 
+      
+      h3
+        font-size: 36px
+        line-height: 1
+
+  .s_padding
+    padding: 65px 0 0 0
+
+  .char_itm 
+    padding: 40px 15px 10px
+    
+    img
+      max-width: 70px
+
+    &.blue_itm 
+
+      p
+        font-size: 14px
+        margin: 0
+        
            
+  .char_itm.blue_itm 
+    
+    h5
+      font-size: 14px
+
+  .map_icons
+
+    p
+      padding-left: 15px 
+
+  .s_quest_about
+    padding-bottom: 60px
 
 
 
@@ -699,8 +845,8 @@
   .input_block input[type=email], .input_block input[type=tel], .input_block input[type=text], .input_block textarea
     margin: 20px 0 10px
 
-  .response_cl
-    padding: 0 15px
+  // .response_cl
+  //   padding: 0 15px
 
   .menu_itms
     position: fixed
@@ -1008,6 +1154,147 @@
 
       img
         max-width: 100%
+
+    // About page
+
+  .s_bread
+    padding-left: 15px
+    padding-right: 15px
+
+  .slider_about_wr 
+
+    .slide
+      height: 330px
+    
+    .slide_counter 
+      
+      .all_slides
+        max-width: 56px
+
+    .about_nav
+      bottom: 0
+      left: 30px
+      max-width: 90%
+      transform: translateX(-50%)
+      left: 50%
+      bottom: 270px
+
+      .slide_arrows
+        max-width: 100px
+
+        div
+          max-width: 40px
+          padding: 5px 0
+    
+    .text_bl
+      max-width: 95%
+      margin: 0 auto
+      padding: 20px
+      position: relative
+      bottom: 0
+
+      img
+        max-width: 240px
+        padding-bottom: 15px
+
+      h5
+        font-size: 14px
+        margin-bottom: 10px
+
+      p
+        font-size: 14px
+        margin: 0
+
+  .invest 
+    
+    .invest_txt 
+      
+      p
+        font-size: 16px
+
+  .char_itm
+    
+    &.white_itm 
+      
+      h3
+        font-size: 36px
+        line-height: 1
+
+  .s_padding
+    padding: 65px 0 0 0
+
+  .char_itm 
+    padding: 40px 15px 10px
+    
+    img
+      max-width: 70px
+
+    &.blue_itm 
+
+      p
+        font-size: 14px
+        margin: 0
+        
+           
+  .char_itm.blue_itm 
+    
+    h5
+      font-size: 14px
+
+  .map_icons
+
+    p
+      padding-left: 15px 
+
+  .s_quest_about
+    padding-bottom: 60px
+
+  .s_under_header 
+    
+    h2
+      font-size: 30px
+      position: relative
+      top: 35px
+
+  .main_about_wr
+    flex-direction: column
+
+    .main_flat_r
+      width: 100%
+
+    .line_wr
+      width: 100%
+      padding-bottom: 50px
+
+    .line_title
+      padding: 0 0 0 80px
+      position: relative 
+      left: 0
+      top: 0
+      transform: rotate(0deg)
+
+      span
+        left: -225px
+        
+        &::after
+          left: 0
+
+  .slider_about
+    width: 100%
+    margin: 0
+
+  .s_quest_about
+
+    .quest_wr
+      flex-direction: column
+
+    .quest_txt
+      width: 100%
+      padding: 20px 0
+
+    .order_mess
+      width: 100%
+
 
       
 
@@ -1482,3 +1769,182 @@
       width: 193px
       border-width: 5px
 
+  // About page
+
+  .s_bread
+    padding-left: 15px
+    padding-right: 15px
+
+  .breadcrumbs 
+
+    a, li
+      font-size: 12px
+
+  .slider_about_wr 
+
+    .slide
+      height: 280px
+    
+    .slide_counter 
+      
+      .all_slides
+        max-width: 56px
+
+    .about_nav
+      bottom: 0
+      left: 30px
+      max-width: 88%
+      transform: translateX(-50%)
+      left: 50%
+      bottom: 60%
+
+      .slide_arrows
+        max-width: 100px
+
+        div
+          max-width: 40px
+          padding: 5px 0
+    
+    .text_bl
+      max-width: 93%
+      margin: 0 auto
+      padding: 20px
+      position: relative
+      bottom: 0
+
+      img
+        max-width: 240px
+        padding-bottom: 15px
+
+      h5
+        font-size: 14px
+        margin-bottom: 10px
+
+      p
+        font-size: 14px
+        margin: 0
+
+  .invest 
+    
+    .invest_txt 
+      
+      p
+        font-size: 16px
+
+  .char_itm
+    
+    &.white_itm 
+      
+      h3
+        font-size: 36px
+        line-height: 1
+
+  .s_padding
+    padding: 30px 0 0 0
+
+  .char_itm 
+    padding: 40px 15px 20px
+    margin-bottom: 30px
+    
+    img
+      max-width: 70px
+
+    &.blue_itm 
+
+      p
+        font-size: 14px
+        margin: 0
+        
+           
+  .char_itm.blue_itm 
+    
+    h5
+      font-size: 14px
+
+  .map_icons
+
+    p
+      padding-left: 15px 
+
+  .s_quest_about
+    padding-bottom: 60px
+
+  .s_under_header 
+    
+    h2
+      font-size: 30px
+      position: relative
+      top: 35px
+
+  .main_about_wr
+    flex-direction: column
+
+    .main_flat_r
+      width: 100%
+
+    .line_wr
+      width: 100%
+      padding-bottom: 50px
+
+    .line_title
+      padding: 0 0 0 80px
+      position: relative 
+      left: 0
+      top: 0
+      transform: rotate(0deg)
+
+      span
+        left: -225px
+        
+        &::after
+          left: 0
+
+  .slider_about
+    width: 100%
+    margin: 0
+
+  .s_quest_about
+
+    .quest_wr
+      flex-direction: column
+
+    .quest_txt
+      width: 100%
+      padding: 20px 0
+
+    .order_mess
+      width: 100%
+
+      .input-container
+        width: 150px
+      
+  .about_map 
+    
+    img
+      height: 270px
+      width: 200%
+      position: relative
+      left: 50%
+      transform: translateX(-50%)
+      display: block
+
+  .map_icons
+
+    p
+      font-size: 12px
+      padding-left: 8px
+
+  .title_type2
+    font-size: 16px
+
+  .invest 
+
+    .invest_txt 
+      
+      h5, p
+        font-size: 14px
+    
+    .img_itm 
+      
+      img
+        width: 45px
