contact + installment pages

--- a/app/sass/_libs.sass
+++ b/app/sass/_libs.sass
@@ -12,4 +12,5 @@
 @import "../libs/fancybox/jquery.fancybox.min.css"
 @import "../libs/aos/aos.css"
 @import "../libs/wickedcss/wickedcss.min.css"
+@import "../libs/semantic-ui-range/range.css"
 
