--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -135,6 +135,25 @@
       p
         font-size: 16px
 
+  // Contact page
+
+  .contact_l
+    padding: 100px 58px
+
+  // Installment
+
+  .range_bl 
+    
+    p
+      font-size: 14px
+
+  .installment-header 
+    
+    label 
+      
+      input
+        max-width: 130px
+
 
 @media screen and (max-device-width: 1280px) and (min-device-width: 1024px)
 
@@ -401,6 +420,51 @@
       h3
         font-size: 57px
         line-height: 1
+
+  // Contact page
+
+  .contact_l
+    padding: 100px 58px
+
+  .s_contact
+    padding: 50px 0 60px
+
+    .line_title
+      left: -43px
+
+  // INSTALLMENT
+
+  .range_bl 
+    
+    .range
+      max-width: 560px
+
+  .saves_doc
+
+    > div
+      text-align: center
+
+  .calculate-res
+    position: relative
+
+    &::after
+      content: ''
+      width: 100%
+      height: 100px
+      position: absolute
+      top: -40px
+      left: 0
+      background-color: #fff
+
+  .butt_calc
+    position: relative
+    z-index: 5
+
+  .calculate_block
+    padding: 60px 25px 0
+
+  .res_but
+    margin: 50px auto 0
 
 
         
@@ -823,6 +887,82 @@
 
   .s_quest_about
     padding-bottom: 60px
+
+
+  // Contact page
+
+
+  .contact_l a, .contact_r a
+    font-size: 15px
+
+  .contact_l
+    padding: 65px 58px 0
+
+  .contact_r
+    padding: 44px 60px
+
+  .s_contact
+    padding: 50px 0 60px
+
+    .line_title
+      left: -43px
+
+    .line_wr
+      width: 8%
+
+  .form_contact 
+    
+    h3
+      font-size: 24px
+
+  // INSTALLMENT
+
+  .range_bl 
+    
+    .range
+      max-width: 560px
+
+  .saves_doc
+
+    > div
+      text-align: center
+
+  .calculate-res
+    position: relative
+
+    &::after
+      content: ''
+      width: 100%
+      height: 100px
+      position: absolute
+      top: -40px
+      left: 0
+      background-color: #fff
+
+  .butt_calc
+    position: relative
+    z-index: 5
+
+  .calculate_block
+    padding: 60px 25px 0
+
+  .res_but
+    margin: 50px auto 0
+
+  .s_calculator
+    padding: 0 0 0 0
+
+    .title_type2
+      margin-bottom: 40px
+
+    .line_wr
+      width: 8%
+
+      .line_title
+        top: 168px
+        left: -49px
+
+
 
 
 
@@ -1294,6 +1434,44 @@
 
     .order_mess
       width: 100%
+
+  // Contact page
+
+  .main_contact_wr
+    flex-direction: column
+
+  .contact_l
+    padding: 42px 58px
+    width: 100%
+
+  .contact_r
+    padding: 44px 60px
+    width: 100%
+
+  .s_contact
+    padding: 50px 0 60px
+
+    .line_title
+      padding-left: 70px
+      left: 0
+      top: 0
+      position: relative
+      transform: rotate(0)
+
+    .line_wr
+      width: 100%
+
+  .form_contact 
+    
+    h3
+      font-size: 24px
+
+  .main_flat_r
+    width: 100%
+
+  .cont_blocks
+    margin-top: 50px
+    flex-direction: column
 
 
       
@@ -1948,3 +2126,54 @@
       
       img
         width: 45px
+
+
+  // Contact page
+
+  .main_contact_wr
+    flex-direction: column
+
+  .contact_l
+    padding: 42px 30px
+    width: 100%
+
+  .contact_r
+    padding: 44px 20px
+    width: 100%
+
+  .s_contact
+    padding: 50px 0 60px
+
+    .line_title
+      padding-left: 65px
+      left: 0
+      top: 0
+      position: relative
+      transform: rotate(0)
+      font-size: 14px
+
+
+    .line_wr
+      width: 100%
+      display: block
+
+      .line_title
+        
+        span
+          left: 80px
+
+  .form_contact 
+    
+    h3
+      font-size: 19px
+
+    input
+      margin-top: 30px
+      font-size: 16px
+
+  .main_flat_r
+    width: 100%
+
+  .cont_blocks
+    margin-top: 30px
+    flex-direction: column
