--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -1167,6 +1167,7 @@ body
 		box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.25)
 
 	.order_mess
+		background-color: #fff
 		width: 70%
 		justify-content: space-around
 		align-items: center
@@ -1374,9 +1375,9 @@ body
 /*** RADIO CUSTOM ****/ 
 		
 .radio-wrap
-	padding: 20px 0 0
+	padding: 10px 0 0
 	display: flex
-	max-width: 260px
+	// max-width: 260px
 	width: 100%
 	justify-content: space-between
 
@@ -1405,9 +1406,10 @@ body
 
 
 .radio span 
+	margin-top: 2px
 	position: relative
 	display: inline-block
-	margin-left: -25px
+	margin-left: -10px
 	vertical-align: top
 	width: 20px
 	height: 20px
@@ -1447,7 +1449,7 @@ body
 /* override for radio */
 .radio span 
 	border-radius: 50%
-	margin-right: 5px
+	margin-right: 8px
 
 .radio span:before 
 	z-index: 3
@@ -1823,6 +1825,326 @@ body
 			
 			span
 				left: 50px
+
+.cont_blocks
+	display: flex
+	width: 100%
+
+.contact_l, .contact_r
+	box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.25)
+	background-color: #ffffff
+	width: 50%
+	box-sizing: border-box
+
+	a
+		font-size: 16px
+		color: $text
+		text-decoration: none
+		display: block
+
+.contact_l
+	padding: 100px 120px
+
+	> div
+		display: flex
+		align-items: center
+		margin-bottom: 40px
+
+	img
+		padding-right: 30px
+
+.form_contact
+
+	h3
+		font-size: 29px
+		@include MontBold()
+		color: $blue
+		line-height: 1.4
+
+	input
+		width: 100%
+		margin-top: 50px
+		color: $text
+		border: none
+		border-bottom: 1px solid $text
+		outline: none
+		padding: 0 0 15px 0
+
+		&::placeholder
+			color: #000
+
+	button
+		font-size: 18px
+		margin-top: 50px
+		max-width: 330px
+		width: 100%
+		padding: 10px 0
+
+
+.contact_r
+	padding: 70px 60px
+
+.for_bg
+	background-image: url(../img/contact/contact-bg.jpg)
+	background-size: cover
+	background-position: center
+	
+
+
+// INSTALLMENT PAGE
+
+.condition
+	padding-top: 100px
+
+.cond_itm
+	position: relative
+	max-width: 330px
+	width: 100%
+	margin-bottom: 140px
+
+	p
+		font-size: 16px
+		color: $text
+	
+	span
+		@include MontBold()
+		font-size: 92px
+		color: rgba($blue, .1)
+		position: absolute
+		left: 0
+		line-height: 1
+		top: -60px
+
+	a
+		@include blueShadow()
+		max-width: 330px
+		display: block
+		text-align: center
+		width: 100%
+		padding: 10px 0
+		color: #fff
+		text-decoration: none
+
+.calculate_block
+	box-shadow: 0px 0px 45px rgba(0, 0, 0, 0.25)
+	padding: 60px 25px
+
+.title_room
+	display: flex
+	justify-content: space-between
+
+	.throwdown
+		border-bottom: 1px solid #000
+		cursor: pointer
+
+.cal-form
+
+	> div
+		margin-bottom: 40px
+
+.square-header
+
+	label
+		display: flex
+
+.inp-block
+	padding-left: 20px
+
+	input
+		text-align: center
+		outline: none
+		max-width: 210px
+		border: none
+		border-bottom: 2px solid $text
+
+		&::placeholder
+			color: $text
+
+.range_bl
+	padding-top: 20px
+	display: flex
+	justify-content: space-between
+	align-items: center
+
+	p
+		margin: 0
+
+	.range
+		max-width: 400px
+
+.square
+	position: relative
+	padding-bottom: 40px
+
+	&::after
+		content: ''
+		width: 100%
+		background-color: rgba(41, 41, 41, 0.1)
+		height: 1px
+		position: absolute
+		bottom: 0
+		left: 0
+
+.bl-all
+	display: flex
+
+.installment-header
+	
+	h4
+		font-size: 16px
+
+	label
+		display: flex
+
+		input
+			max-width: 150px
+
+			&:disabled
+				background-color: transparent
+
+input
+	&:disabled
+		background-color: transparent
+
+.butt_calc
+	display: block
+	max-width: 330px
+	width: 100%
+	margin: auto
+	font-size: 18px
+	color: #fff
+	text-align: center
+	padding: 10px 0
+	background: rgba(32, 51, 113, 0.5)
+	margin-bottom: 0!important
+	cursor: pointer
+
+.calculate-res
+	box-shadow: 0px 0px 45px rgba(0, 0, 0, 0.25)
+	padding: 60px 25px
+
+.res-all
+	position: relative
+	padding-bottom: 10px
+
+	&::after
+		content: ''
+		width: 100%
+		background-color: rgba(41, 41, 41, 0.1)
+		height: 1px
+		position: absolute
+		bottom: 0
+		left: 0
+		
+
+	h4
+		@include MontReg()
+		font-size: 16px
+		margin: 0
+
+	p
+		font-size: 27px
+		@include MontBold()
+
+.res-descr
+	position: relative
+	padding: 30px 0 20px
+
+	&::after
+		content: ''
+		width: 100%
+		background-color: rgba(41, 41, 41, 0.1)
+		height: 1px
+		position: absolute
+		bottom: 0
+		left: 0
+
+	h4
+		font-size: 16px
+		margin: 0
+
+	p
+		font-size: 16px
+
+.res-price
+	padding-top: 30px
+
+	h4
+		margin: 0
+
+.res_but
+	border-color: $blue
+	margin-top: 65px
+
+	a
+		color: $blue
+
+	path
+		fill: $blue
+
+	.eff-2
+		background-color: $blue
+
+	&:hover
+
+		path
+			fill: #fff
+
+		a
+			color: #fff
+
+
+.s_calculator
+	padding-top: 20px
+
+	.line_wr 
+		
+		.line_title 
+			
+			span
+				left: 37px
+
+	.title_type2
+		margin-bottom: 60px
+
+.hit_flats
+	padding-bottom: 60px
+
+	.slide_flat 
+		
+		.top_txt
+			align-items: center
+
+			h4
+				margin: 0
+
+			span
+				margin-left: 10px
+
+
+	
+	 
+
+
+
+
+
+
+	
+
+// range custom style
+
+.ui.range 
+	
+	.inner 
+		
+		.thumb
+			background: $blue linear-gradient(transparent,rgba(0,0,0,.05))
+
+		.track 
+			background-color: rgba(0,0,0,.2)
+
+
 
 
 
