--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -13,6 +13,20 @@
     position: relative
     transform: translateX(-50%)
 
+  // ABOUT US PAGE
+
+  .s_about_us 
+	
+    .line_wr 
+      
+      .line_title 
+        left: -42px
+
+  .about_img 
+    
+    img
+      max-width: 90%
+
   // MAIN PAGE
 
   .mnu 
@@ -163,6 +177,39 @@
     left: 50%
     position: relative
     transform: translateX(-50%)
+
+  // ABOUT US PAGE
+
+  .support_txt
+    font-size: 15px
+
+  .s_partners
+    padding-top: 60px 
+
+  .about_txt
+    font-size: 15px
+
+  .s_about_us 
+	
+    .line_wr 
+      
+      .line_title 
+        left: -42px
+
+  .about_img 
+    
+    img
+      max-width: 90% 
+
+  .team_row
+    padding-top: 30px
+
+  .team_card 
+    
+    .team_txt 
+      
+      p
+        font-size: 15px
 
   // MAIN PAGE
 
@@ -486,6 +533,43 @@
     position: fixed
     width: 100%
     z-index: 100
+
+  // ABOUT US PAGE
+
+  .support_txt
+    font-size: 15px
+
+  .s_partners
+    padding-top: 60px 
+
+  .about_txt
+    font-size: 15px
+
+  .s_about_us 
+	
+    .line_wr 
+      
+      .line_title 
+        left: -35px
+
+  .about_img 
+    
+    img
+      max-width: 100% 
+
+  .team_row
+    padding-top: 30px
+
+  .team_card 
+    max-width: 275px
+    
+    .team_txt 
+      
+      p, h5, h4
+        font-size: 14px
+
+  .youtube
+    margin: 0 auto 60px
 
   // MAIN PAGE
 
@@ -993,6 +1077,47 @@
     width: 100%
     z-index: 20
 
+  // ABOUT US PAGE
+
+  .support_txt
+    font-size: 15px
+
+  .s_partners
+    padding-top: 60px 
+
+  .about_txt
+    font-size: 15px
+    margin-top: 40px
+
+  .s_about_us 
+	
+    .line_wr 
+      
+      .line_title 
+        left: -35px
+
+        span
+          left: -134px
+
+  .about_img 
+    
+    img
+      max-width: 100% 
+
+  .team_row
+    padding-top: 30px
+
+  .team_card 
+    max-width: 315px
+    
+    .team_txt 
+      
+      p, h5, h4
+        font-size: 14px
+
+  .youtube
+    margin: 0 auto 60px
+
   // MAIN PAGE
 
   .top_sect 
@@ -1474,6 +1599,97 @@
     flex-direction: column
 
 
+  // INSTALLMENT
+
+  .installment-header 
+    
+    label
+      flex-direction: column
+
+      .inp-block
+        padding: 10px 20px 0 0
+
+  .range_bl 
+    
+    .range
+      max-width: 100%
+      position: absolute
+
+    p
+      white-space: nowrap
+      position: relative
+      top: 30px
+      font-size: 16px
+
+  .square
+    padding-bottom: 56px
+
+  .installment
+    position: relative
+
+
+  .saves_doc
+
+    > div
+      text-align: center
+
+  .calculate-res
+    position: relative
+
+    &::after
+      content: ''
+      width: 100%
+      height: 100px
+      position: absolute
+      top: -40px
+      left: 0
+      background-color: #fff
+
+  .butt_calc
+    position: relative
+    z-index: 5
+
+  .calculate_block
+    padding: 60px 25px 0
+
+  .res_but
+    margin: 50px auto 0
+
+  .s_calculator
+    padding: 0 0 0 0
+
+    .title_type2
+      margin-bottom: 40px
+
+    .line_wr
+      margin-bottom: 20px
+      width: 100%
+      padding-left: 50px
+
+      .line_title
+        position: relative
+        top: 0
+        left: 0
+        transform: rotate(0)
+
+  .radio-wrap
+    justify-content: flex-start
+
+    .radio
+      margin-bottom: 10px
+    
+    .frts_col, .scnd_col
+      display: flex
+      flex-direction: column
+
+    .frts_col
+      padding-right: 50px
+
+      
+
+
+
+
       
 
 @media screen and (max-device-width: 570px) and (min-device-width: 320px)
@@ -1554,6 +1770,48 @@
         width: 20px
         height: auto
 
+    // ABOUT US PAGE
+
+  .support_txt
+    font-size: 15px
+
+  .s_partners
+    padding-top: 60px 
+
+  .about_txt
+    font-size: 15px
+    margin-top: 40px
+
+  .s_about_us 
+	
+    .line_wr 
+      
+      .line_title 
+        left: -35px
+
+        span
+          left: -134px
+
+  .about_img 
+    
+    img
+      max-width: 100% 
+
+  .team_row
+    padding-top: 30px
+
+  .team_card 
+    max-width: 315px
+    
+    .team_txt 
+      
+      p, h5, h4
+        font-size: 14px
+
+  .youtube
+    margin: 0 auto 60px
+
+
   // MAIN PAGE
 
   .top_sect 
@@ -1574,6 +1832,16 @@
       justify-content: center
       align-items: cebter
       padding: 0 15px 10%
+
+  .our_partners
+    margin: 30px 0 0 0
+    padding: 50px 30px 0
+
+  .city_support
+    padding: 10px 0 50px
+
+  .support_telegr
+    padding-top: 30px
 
   .top_sect
     height: calc(100vh - 77px)
@@ -2177,3 +2445,138 @@
   .cont_blocks
     margin-top: 30px
     flex-direction: column
+
+  // INSTALLMENT
+
+  .installment-header 
+    
+    label
+      flex-direction: column
+
+      .inp-block
+        padding: 10px 20px 0 0
+
+  .range_bl 
+    
+    .range
+      max-width: 100%
+      position: absolute
+
+    p
+      white-space: nowrap
+      position: relative
+      top: 30px
+      font-size: 16px
+
+  .square
+    padding-bottom: 56px
+
+  .installment
+    position: relative
+
+
+  .saves_doc
+
+    > div
+      text-align: center
+
+  .calculate-res
+    position: relative
+
+    &::after
+      content: ''
+      width: 100%
+      height: 100px
+      position: absolute
+      top: -40px
+      left: 0
+      background-color: #fff
+
+  .installment-header 
+    
+    label 
+      
+      input
+        max-width: 125px
+
+  .butt_calc
+    position: relative
+    z-index: 5
+    margin: 58px auto 0
+
+  .calculate_block
+    position: relative
+    padding: 60px 25px 0
+
+  .res_but
+    margin: 50px auto 0
+
+  .s_calculator
+    padding: 0 0 0 0
+
+    .title_type2
+      margin-bottom: 20px
+
+    .line_wr
+      display: block
+      margin-bottom: 20px
+      width: 100%
+      padding-left: 54px
+
+      .line_title
+        font-size: 12px
+        position: relative
+        top: 0
+        left: 0
+        transform: rotate(0)
+
+        span
+
+          &::after
+            left: -178px
+
+  .inp-block 
+    display: flex
+    align-items: center
+    
+    input
+      max-width: 76px
+
+  .radio-wrap
+    justify-content: flex-start
+
+    label
+      font-size: 14px
+
+    .radio
+      margin-bottom: 10px
+    
+    .frts_col, .scnd_col
+      display: flex
+      flex-direction: column
+
+    .frts_col
+      padding-right: 20px
+
+  .cal-form>div
+    margin-bottom: 20px
+
+  .cond_itm 
+    margin-bottom: 50px
+    
+    span
+      font-size: 36px
+      top: -18px
+
+    p
+      font-size: 12px
+
+  .title_room 
+    
+    .throwdown
+      font-size: 12px
+      position: absolute
+      top: 15px
+      right: 20px
+      // top: -20px
+      // white-space: nowrap
