--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -2122,6 +2122,131 @@ input
 				margin-left: 10px
 
 
+// About us 
+
+.about_img
+
+	img
+		max-width: 100%
+		display: block
+		height: auto
+
+.ab_col
+	display: flex
+	align-items: center
+
+
+.s_about_us 
+	
+	.line_wr 
+		
+		.line_title 
+			
+			span
+				left: 69px
+
+
+.youtube
+	width: 560px
+	
+	iframe
+		display: block
+		width: 100%
+		height: 315px
+
+
+.team_row
+	padding-top: 80px
+
+.team_card
+	max-width: 387px
+	margin: 0 auto 60px
+
+	.img_itm
+		
+		img
+			max-width: 100%
+			margin: auto
+			display: block
+			height: auto
+
+	.team_txt
+
+		h5
+			font-size: 18px
+			margin-top: 25px
+			line-height: 1.4
+
+		h4
+			font-size: 16px
+			margin: 20px 0
+			line-height: 1.4
+
+		p
+			font-size: 16px
+
+
+.our_partners
+	box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.25)
+	display: flex
+	justify-content: center
+	padding: 100px 30px 40px 
+	margin: 60px 0 0 0
+
+.partner_img
+	margin-bottom: 60px
+
+	img
+		display: block
+		height: auto
+		margin: auto
+		max-width: 100%
+
+.city_support
+	padding: 60px 0 100px
+
+.support_telegr
+	padding-top: 60px
+	display: flex
+	justify-content: center
+	flex-direction: column
+	text-align: center
+
+	a
+		max-width: 330px
+		margin: 20px auto 0
+
+.s_statistics
+
+.stat_wr
+	justify-content: flex-end
+	margin: auto
+	display: flex
+	align-items: center
+
+	h3
+		@include MontBold()
+		font-size: 50px
+
+	p
+		font-size: 21px
+		padding-left: 20px
+
+.consult_planning
+	display: flex
+	justify-content: center
+	padding-top: 50px
+
+	a
+		max-width: 330px
+		padding: 15px 0
+
+.nav_planning
+	background-color: $blue
+	padding: 40px 30px
+
+
+
 	
 	 
 
