--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -13,6 +13,13 @@
     position: relative
     transform: translateX(-50%)
 
+  // FLATS PAGE
+
+  .stat_wr 
+    
+    p
+      // font-size: 20px 
+
   // ABOUT US PAGE
 
   .s_about_us 
@@ -169,6 +176,33 @@
         max-width: 130px
 
 
+  // FLAT OPEN
+
+  .flat_info_main 
+    
+    h4
+      font-size: 13px
+
+    h5
+      font-size: 32px
+
+  .all_flat_info
+    padding: 45px 0
+
+    h5
+      margin-bottom: 10px
+
+  .flat_buttns 
+    
+    a
+      max-width: 236px
+      font-size: 16px
+
+  // NEWS PAGE
+
+  .news_nav
+    font-size: 12px
+
 @media screen and (max-device-width: 1280px) and (min-device-width: 1024px)
 
   .response_cl
@@ -177,6 +211,34 @@
     left: 50%
     position: relative
     transform: translateX(-50%)
+
+  // FLATS PAGE
+  .s_flats
+
+    .line_wr
+      width: 5%
+
+    .main_flat_r
+      width: 95%
+
+    .button-2 
+      
+      a
+        font-size: 15px
+
+  .comercial_link 
+    
+    span
+      font-size: 15px
+      line-height: 1.2
+
+  .nav_planning
+    padding: 25px 30px
+
+  .stat_wr 
+    
+    p
+      line-height: 1.3
 
   // ABOUT US PAGE
 
@@ -514,6 +576,24 @@
     margin: 50px auto 0
 
 
+  // FLAT OPEN
+
+  .flat_open
+    padding: 30px 20px 60px
+
+  .flat_info_main
+    margin-left: 150px
+    margin-bottom: 30px
+
+    h5
+      padding-left: 0
+
+  // NEWS PAGE
+
+  .news_nav
+    font-size: 14px
+
+
         
 
 
@@ -533,6 +613,7 @@
     position: fixed
     width: 100%
     z-index: 100
+
 
   // ABOUT US PAGE
 
@@ -1045,6 +1126,143 @@
       .line_title
         top: 168px
         left: -49px
+
+  // FLATS PAGE
+
+  .s_flats
+    padding: 40px 0 0 0
+
+    .line_title
+      top: 349px
+      left: -85px
+
+    .line_wr
+      width: 5%
+
+    .main_flat_r
+      width: 95%
+
+    .top_txt
+
+      span
+        font-weight: bold
+
+    .button-2 
+      
+      a
+        font-size: 15px
+
+  .flats_bl 
+    
+    .slide_flat
+      max-width: 200px
+
+      .top_txt
+        padding-bottom: 30px
+
+  .comercial_link 
+    
+    span
+      font-size: 15px
+      line-height: 1.2
+
+  .nav_planning
+    padding: 20px 30px
+
+    .button-2
+      margin: 15px 0
+
+  .stat_wr 
+    justify-content: flex-start
+    
+    h3
+      font-size: 36px
+
+    p
+      font-size: 16px
+
+    // FLAT OPEN
+
+  .flat_open
+    padding: 30px 20px 60px
+
+  .flat_info_main
+    margin-left: 150px
+    margin-bottom: 30px
+
+    h5
+      padding-left: 0
+      line-height: 1
+
+  .all_flat_info
+    padding: 30px 0 60px
+
+  .s_other_flats
+    
+    .slide_flat 
+      
+      .top_txt 
+        
+        p
+          font-size: 14px
+
+  // NEWS PAGE
+
+  .news_nav
+    font-size: 13px
+
+  .main_about_wr 
+    
+    .line_title
+      left: -16px
+
+  .main_new_desc
+
+    div 
+      margin-top: 0
+
+      > *
+        font-size: 14px
+
+  .s_news
+
+
+  .main_new_desc 
+    
+    h3
+      font-size: 21px
+
+    a
+      margin-top: 10px
+      font-size: 15px
+
+  .new 
+
+    h4
+      font-size: 15px
+      margin-top: 10px
+      line-height: 1.3
+    
+    .img_new
+      height: 140px
+
+    > div
+      font-size: 14px
+      margin-top: 10px
+
+    .bott_link
+      font-size: 16px
+      margin-top: 10px
+
+.news_bl 
+  
+  .nav_paginate
+    margin: 20px 0 60px
+      
+
+
+
+
 
 
 
@@ -1684,6 +1902,189 @@
 
     .frts_col
       padding-right: 50px
+
+  // FLATS PAGE
+
+  .s_flats
+    padding: 60px 0 0 0
+
+    .line_title
+      top: 0
+      left: 0
+      padding: 0 0 0 57px
+
+      span
+        left: -250px
+
+    .line_wr
+      width: 100%
+
+    .main_flat_r
+      width: 100%
+
+    .top_txt
+
+      span
+        font-weight: bold
+
+    .button-2 
+      
+      a
+        font-size: 15px
+
+  .flats_bl 
+    
+    .slide_flat
+      max-width: 200px
+
+      .top_txt
+        padding-bottom: 30px
+
+  .comercial_link 
+    
+    span
+      font-size: 15px
+      line-height: 1.2
+
+  .nav_planning
+    padding: 20px 30px
+
+    .button-2
+      margin: 15px 0
+
+  .stat_wr 
+    // text-align: cenetr
+    justify-content: center
+    max-width: 240px
+    
+    h3
+      font-size: 36px
+
+    p
+      font-size: 16px
+
+  .consult_planning
+
+    a
+      font-size: 16px
+
+  // FLAT OPEN
+
+  .flat_open
+    padding: 30px 30px 30px
+
+  .layouts_nav 
+    
+    a
+      max-width: 150px
+      font-size: 12px
+      line-height: 1.4
+
+    img
+      width: 13px
+
+  .flat_img 
+
+    a
+      display: block
+      margin: auto
+
+  .flat_buttns
+    flex-direction: column
+    max-width: 100%
+
+    a
+      margin: 0 auto 30px
+
+  .flat_info_main
+    margin-bottom: 30px
+
+    h5
+      padding-left: 0
+      font-size: 26px
+      line-height: 1
+
+  .inf_fl 
+    
+    li
+      padding: 4px 0
+
+  .all_flat_info
+    padding: 50px 0 10px
+
+    h5
+      margin-bottom: 15px
+
+  .on_floor
+    padding-bottom: 30px
+
+  .s_other_flats
+    
+    .slide_flat 
+      
+      .top_txt 
+        
+        p
+          font-size: 14px
+
+  // NEWS PAGE
+
+  .news_nav
+    font-size: 14px
+    margin: 0 auto 10px
+
+  .main_about_wr 
+    
+    .line_title
+      display: none
+      left: -16px
+
+    div 
+      margin-top: 0
+
+      > *
+        font-size: 14px
+
+  .s_news
+    padding: 0
+
+  .main_new
+    padding: 30px 10px
+
+  .main_new_wr
+    margin-top: 20px
+
+  .main_new_desc 
+    text-align: center
+    padding-top: 20px
+    
+    h3
+      font-size: 21px
+
+    a
+      margin-top: 10px
+
+  .new 
+
+    h4
+      font-size: 15px
+      margin-top: 10px
+    
+    .img_new
+      height: 140px
+
+    > div
+      font-size: 14px
+      margin-top: 10px
+
+    .bott_link
+      font-size: 16px
+      margin-top: 10px
+
+.news_bl 
+  
+  .nav_paginate
+    margin: 20px 0 60px
 
       
 
@@ -2580,3 +2981,228 @@
       right: 20px
       // top: -20px
       // white-space: nowrap
+
+    // FLATS PAGE
+
+  .s_flats
+    padding: 60px 0 0 0
+
+    .line_title
+      top: 0
+      left: 0
+      padding: 0 0 0 57px
+
+      span
+        left: -250px
+
+    .line_wr
+      width: 100%
+
+    .main_flat_r
+      width: 100%
+
+    .top_txt
+
+      span
+        font-weight: bold
+
+    .button-2 
+      
+      a
+        font-size: 12px
+
+      span
+        font-size: 12px
+
+  .flats_bl 
+    
+    .slide_flat
+      max-width: 200px
+      padding: 20px
+      margin: 0 auto 40px
+
+      .top_txt
+        padding-bottom: 30px
+
+        p
+          font-size: 12px
+
+  .comercial_link 
+    
+    span
+      font-size: 12px
+      line-height: 1.5
+
+  .nav_planning
+    padding: 20px 15px
+
+    .button-2
+      margin: 10px 0
+
+  .stat_wr 
+    // text-align: cenetr
+    justify-content: center
+    max-width: 240px
+    
+    h3
+      font-size: 36px
+
+    p
+      font-size: 16px
+
+  .consult_planning
+
+    a
+      max-width: 230px
+      font-size: 14px
+
+  // FLAT OPEN
+
+  .flat_open
+    padding: 30px 30px 30px
+
+  .layouts_nav_prev
+
+    img
+      position: relative
+      left: -10px
+
+
+  .layouts_nav 
+    
+    a
+      max-width: 100px
+      font-size: 12px
+      line-height: 1.1
+
+    img
+      width: 13px
+
+  .flat_img 
+
+    a
+      display: block
+      margin: auto
+
+  .flat_buttns
+    flex-direction: column
+    max-width: 100%
+
+    a
+      margin: 0 auto 30px
+      font-size: 14px
+
+  .flat_info_main
+    margin-bottom: 30px
+
+    h5
+      padding-left: 0
+      font-size: 18px
+      line-height: 1
+
+  .inf_fl 
+    
+    li
+      padding: 4px 0
+
+  .all_flat_info
+    padding: 50px 0 10px
+
+    h5
+      margin-bottom: 15px
+
+  .on_floor
+    padding-bottom: 30px
+
+  .layouts_nav 
+    
+    img
+      margin: 0
+
+  .s_other_flats
+    
+    .slide_flat 
+      
+      .top_txt 
+        
+        p
+          font-size: 14px
+
+  .breadcrumbs
+    font-size: 12px
+
+
+  // NEWS PAGE
+
+  .news_nav
+    font-size: 14px
+    margin: 0 auto 10px
+
+  .s_news
+    padding: 0
+
+    .main_flat_r
+      margin-top: -40px
+
+    .line_wr
+      display: block
+      top: 780px
+
+    .main_about_wr 
+      // margin-top: 40px
+    
+      .line_title
+        font-size: 16px
+        // display: none
+        left: -15px
+
+        span
+          left: -140px
+
+    .main_new_desc
+
+      div 
+        margin-top: 0
+
+        > *
+          font-size: 14px
+
+  .main_new
+    padding: 30px 10px
+
+  .main_new_wr
+    margin-top: 20px
+
+  .main_new_desc 
+    text-align: center
+    padding-top: 20px
+    
+    h3
+      font-size: 21px
+
+    a
+      margin-top: 10px
+      font-size: 14px
+
+  .new 
+
+    h4
+      font-size: 15px
+      margin-top: 10px
+    
+    .img_new
+      height: 140px
+
+    > div
+      font-size: 14px
+      margin-top: 10px
+
+    .bott_link
+      font-size: 16px
+      margin-top: 10px
+
+  .news_bl 
+    padding-top: 100px
+    
+    .nav_paginate
+      margin: 20px 0 60px
